nccl_ep/include/nccl_ep.h


ncclResult_t ncclEpGetVersion(int* version);
typedef struct ncclEpTensor {
    unsigned int size;          
    unsigned int magic;         
    unsigned int ndim;          
    ncclDataType_t datatype;
    void* data;                 
    ncclWindow_t win_hdl;       
    uint64_t win_offset;        
    size_t* sizes;              
} ncclEpTensor_t;
typedef struct {
    unsigned int size;  
    unsigned int magic; 
} ncclEpTensorAllocConfig_t;
ncclResult_t ncclEpTensorAlloc(
    ncclEpTensor_t** tensor,
    unsigned int ndim,
    ncclDataType_t datatype,
    const size_t* sizes,
    const ncclEpTensorAllocConfig_t* config);
ncclResult_t ncclEpTensorDestroy(ncclEpTensor_t* tensor);
typedef cudaError_t (*ncclEpAllocFn_t)(void** ptr, size_t size, void* context);
typedef cudaError_t (*ncclEpFreeFn_t)(void* ptr, void* context);
typedef struct {
    ncclEpAllocFn_t alloc_fn;
    ncclEpFreeFn_t free_fn;
    void* context;
} ncclEpAllocConfig_t;
typedef struct {
    unsigned int size;                   
    unsigned int magic;                  
    unsigned int version;                
    ncclEpAlgorithm_t algorithm;         
    unsigned int num_experts;            
    unsigned int max_dispatch_tokens_per_rank;
    unsigned int max_recv_tokens_per_rank;
    unsigned int max_token_bytes;
    unsigned long int rdma_buffer_size;
    unsigned int num_qp_per_rank;        
    unsigned int num_channels;
    unsigned int max_num_sms;
    ncclEpAllocConfig_t alloc;
    unsigned int enable_mask;
    uint64_t timeout_ns;
    ncclEpZeroCopyMode_t zero_copy;
    ncclEpOverflowPolicy_t overflow_policy;
    unsigned int num_topk;
    unsigned char padding_v2[4]; 
} ncclEpGroupConfig_t;
typedef struct ncclEpGroup* ncclEpGroup_t;
ncclResult_t ncclEpCreateGroup(ncclEpGroup_t* ep_group, ncclComm_t comm, const ncclEpGroupConfig_t* config);
ncclResult_t ncclEpGroupDestroy(ncclEpGroup_t ep_group);
typedef struct {
    unsigned int size;                
    unsigned int magic;               
    ncclEpTensor_t* expert_counters;     
    ncclEpTensor_t* src_rank_counters; 
    ncclEpTensor_t* expert_offsets; 
    ncclEpTensor_t* recv_total_counter; 
    ncclEpExpertIdKind_t recv_topk_idx_kind; 
    unsigned char padding_v2[4]; 
} ncclEpLayoutInfo_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    ncclEpTensor_t* tokens; 
    ncclEpTensor_t* topk_weights; 
    ncclEpTensor_t* scales;       
} ncclEpDispatchInputs_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    ncclEpTensor_t* tokens; 
    ncclEpTensor_t* topk_weights; 
    ncclEpTensor_t* scales;       
    ncclEpTensor_t* topk_idx; 
} ncclEpDispatchOutputs_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    ncclEpTensor_t* tokens; 
    ncclEpTensor_t* topk_weights; 
    ncclEpTensor_t* scales;
} ncclEpCombineInputs_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    ncclEpTensor_t* tokens; 
    ncclEpTensor_t* topk_weights; 
} ncclEpCombineOutputs_t;
typedef struct ncclEpHandle* ncclEpHandle_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    size_t dispatch_output_per_expert_alignment;
} ncclEpHandleConfig_t;
ncclResult_t ncclEpHandleMemSize(
    ncclEpGroup_t ep_group,
    ncclEpLayout_t layout,
    const ncclEpHandleConfig_t* config,
    size_t* size_out,
    int num_topk);
ncclResult_t ncclEpInitHandle(
    ncclEpHandle_t* handle,
    ncclEpGroup_t ep_group,
    ncclEpLayout_t layout,
    const ncclEpHandleConfig_t* config,
    int num_topk,
    const ncclEpTensor_t* handle_mem 
);
ncclResult_t ncclEpUpdateHandle(
    ncclEpHandle_t handle,
    const ncclEpTensor_t* topk_idx,
    const ncclEpLayoutInfo_t* layout_info, 
    cudaStream_t stream);
ncclResult_t ncclEpCreateHandle(
    ncclEpHandle_t* handle,
    ncclEpGroup_t ep_group,
    ncclEpLayout_t layout,
    const ncclEpTensor_t* topk_idx,
    const ncclEpLayoutInfo_t* layout_info, 
    const ncclEpHandleConfig_t* config, 
    cudaStream_t stream);
ncclResult_t ncclEpHandleDestroy(ncclEpHandle_t handle);
ncclResult_t ncclEpHandleMemSize(
    ncclEpGroup_t ep_group,
    ncclEpLayout_t layout,
    const ncclEpHandleConfig_t* config,
    size_t* size_out,
    int num_topk);
ncclResult_t ncclEpInitHandle(
    ncclEpHandle_t* handle,
    ncclEpGroup_t ep_group,
    ncclEpLayout_t layout,
    const ncclEpHandleConfig_t* config,
    int num_topk,
    const ncclEpTensor_t* handle_mem 
);
ncclResult_t ncclEpUpdateHandle(
    ncclEpHandle_t handle,
    const ncclEpTensor_t* topk_idx,
    const ncclEpLayoutInfo_t* layout_info, 
    cudaStream_t stream);
typedef enum {
    NCCL_EP_DISP_QUANT_NONE = 0,
    NCCL_EP_DISP_QUANT_FWD = 1,
    NCCL_EP_DISP_QUANT_DS_FP8E3M4 = 2,
} ncclEpDispQuant_t;
typedef enum {
    NCCL_EP_COMB_QUANT_NONE = 0,
    NCCL_EP_COMB_QUANT_NVFP4 = 1,
    NCCL_EP_COMB_QUANT_MXFP8 = 2,
} ncclEpCombQuant_t;
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    unsigned int send_only; 
    unsigned int round_scales; 
    ncclEpPassDir_t pass_direction; 
    ncclEpDispQuant_t quant_recipe; 
} ncclEpDispatchConfig_t;
ncclResult_t ncclEpDispatch(
    ncclEpHandle_t handle,
    const ncclEpDispatchInputs_t* inputs,
    const ncclEpDispatchOutputs_t* outputs,
    const ncclEpLayoutInfo_t* layout_info, 
    const ncclEpDispatchConfig_t* config, 
    cudaStream_t stream);
typedef struct {
    unsigned int size; 
    unsigned int magic; 
    unsigned int send_only; 
    ncclEpPassDir_t pass_direction; 
    ncclEpCombQuant_t quant_recipe; 
} ncclEpCombineConfig_t;
ncclResult_t ncclEpCombine(
    ncclEpHandle_t handle,
    const ncclEpCombineInputs_t* inputs,
    const ncclEpCombineOutputs_t* outputs,
    const ncclEpCombineConfig_t* config, 
    cudaStream_t stream);
typedef struct ncclEpCompleteConfig {
    unsigned int size; 
    unsigned int magic; 
} ncclEpCompleteConfig_t;
ncclResult_t ncclEpComplete(ncclEpHandle_t handle, const ncclEpCompleteConfig_t* config, cudaStream_t stream);
ncclResult_t ncclEpMaskQuery(ncclEpGroup_t ep_group, int* mask_status, cudaStream_t stream);
ncclResult_t ncclEpMaskUpdate(ncclEpGroup_t ep_group, const int* mask, cudaStream_t stream);
ncclResult_t ncclEpMaskClean(ncclEpGroup_t ep_group, cudaStream_t stream);
ncclResult_t ncclEpGetAsyncError(ncclEpGroup_t ep_group, int* error_out);
ncclResult_t ncclEpErrorClear(ncclEpGroup_t ep_group);