python/nccl/_extensions/bindings/cynccl_ep.pxd

# Copyright (c) 2024-2025, NVIDIA CORPORATION & AFFILIATES. ALL RIGHTS RESERVED.
#
# SPDX-License-Identifier: Apache-2.0
#
# This code was automatically generated with version 0.2.0. Do not modify it directly.


# <<<< PREAMBLE CONTENT >>>>

from libc.stdint cimport uint64_t


# <<<< END OF PREAMBLE CONTENT >>>>

from nccl.bindings.cynccl cimport ncclResult_t, ncclDataType_t, _NCCLRESULT_T_INTERNAL_LOADING_ERROR



###############################################################################
# Types (structs, enums, ...)
###############################################################################

# enums
ctypedef enum ncclEpAlgorithm_t "ncclEpAlgorithm_t":
    NCCL_EP_ALGO_LOW_LATENCY "NCCL_EP_ALGO_LOW_LATENCY" = 0
    NCCL_EP_ALGO_HIGH_THROUGHPUT "NCCL_EP_ALGO_HIGH_THROUGHPUT" = 1

ctypedef enum ncclEpOverflowPolicy_t "ncclEpOverflowPolicy_t":
    NCCL_EP_OVERFLOW_AUTO "NCCL_EP_OVERFLOW_AUTO" = 0
    NCCL_EP_OVERFLOW_TRAP "NCCL_EP_OVERFLOW_TRAP"
    NCCL_EP_OVERFLOW_DROP "NCCL_EP_OVERFLOW_DROP"

ctypedef enum ncclEpLayout_t "ncclEpLayout_t":
    NCCL_EP_LAYOUT_UNSET "NCCL_EP_LAYOUT_UNSET" = 0
    NCCL_EP_LAYOUT_EXPERT_MAJOR "NCCL_EP_LAYOUT_EXPERT_MAJOR"
    NCCL_EP_LAYOUT_RANK_MAJOR "NCCL_EP_LAYOUT_RANK_MAJOR"
    NCCL_EP_LAYOUT_FLAT "NCCL_EP_LAYOUT_FLAT"

ctypedef enum ncclEpPassDir_t "ncclEpPassDir_t":
    NCCL_EP_FWD_PASS "NCCL_EP_FWD_PASS" = 0
    NCCL_EP_BWD_PASS "NCCL_EP_BWD_PASS" = 1

ctypedef enum ncclEpZeroCopyMode_t "ncclEpZeroCopyMode_t":
    NCCL_EP_ZERO_COPY_AUTO "NCCL_EP_ZERO_COPY_AUTO" = 0
    NCCL_EP_ZERO_COPY_OFF "NCCL_EP_ZERO_COPY_OFF"
    NCCL_EP_ZERO_COPY_ON "NCCL_EP_ZERO_COPY_ON"

ctypedef enum ncclEpExpertIdKind_t "ncclEpExpertIdKind_t":
    NCCL_EP_EXPERT_ID_AUTO "NCCL_EP_EXPERT_ID_AUTO" = 0
    NCCL_EP_EXPERT_ID_LOCAL "NCCL_EP_EXPERT_ID_LOCAL" = 1
    NCCL_EP_EXPERT_ID_GLOBAL "NCCL_EP_EXPERT_ID_GLOBAL" = 2

ctypedef enum ncclEpDispQuant_t "ncclEpDispQuant_t":
    NCCL_EP_DISP_QUANT_NONE "NCCL_EP_DISP_QUANT_NONE" = 0
    NCCL_EP_DISP_QUANT_FWD "NCCL_EP_DISP_QUANT_FWD" = 1
    NCCL_EP_DISP_QUANT_DS_FP8E3M4 "NCCL_EP_DISP_QUANT_DS_FP8E3M4" = 2

ctypedef enum ncclEpCombQuant_t "ncclEpCombQuant_t":
    NCCL_EP_COMB_QUANT_NONE "NCCL_EP_COMB_QUANT_NONE" = 0
    NCCL_EP_COMB_QUANT_NVFP4 "NCCL_EP_COMB_QUANT_NVFP4" = 1


# types
cdef extern from *:
    """
    #include <driver_types.h>
    #include <library_types.h>
    #include <cuComplex.h>
    """
    ctypedef void* cudaStream_t 'cudaStream_t'
    ctypedef int cudaError_t 'cudaError_t'


ctypedef void* ncclComm_t 'ncclComm_t'

ctypedef void* ncclWindow_t 'ncclWindow_t'

ctypedef void* ncclEpGroup_t 'ncclEpGroup_t'

ctypedef void* ncclEpHandle_t 'ncclEpHandle_t'

ctypedef struct ncclEpTensorAllocConfig_t 'ncclEpTensorAllocConfig_t':
    unsigned int size
    unsigned int magic

ctypedef cudaError_t (*ncclEpAllocFn_t 'ncclEpAllocFn_t')(
    void** ptr,
    size_t size,
    void* context
)

ctypedef cudaError_t (*ncclEpFreeFn_t 'ncclEpFreeFn_t')(
    void* ptr,
    void* context
)

ctypedef struct ncclEpHandleConfig_t 'ncclEpHandleConfig_t':
    unsigned int size
    unsigned int magic
    size_t dispatch_output_per_expert_alignment

ctypedef struct ncclEpDispatchConfig_t 'ncclEpDispatchConfig_t':
    unsigned int size
    unsigned int magic
    unsigned int send_only
    unsigned int round_scales
    ncclEpPassDir_t pass_direction
    ncclEpDispQuant_t quant_recipe

ctypedef struct ncclEpCombineConfig_t 'ncclEpCombineConfig_t':
    unsigned int size
    unsigned int magic
    unsigned int send_only
    ncclEpPassDir_t pass_direction
    ncclEpCombQuant_t quant_recipe

ctypedef struct ncclEpCompleteConfig_t 'ncclEpCompleteConfig_t':
    unsigned int size
    unsigned int magic

ctypedef struct ncclEpTensor_t 'ncclEpTensor_t':
    unsigned int size
    unsigned int magic
    unsigned int ndim
    ncclDataType_t datatype
    void* data
    ncclWindow_t win_hdl
    uint64_t win_offset
    size_t* sizes

ctypedef struct ncclEpAllocConfig_t 'ncclEpAllocConfig_t':
    ncclEpAllocFn_t alloc_fn
    ncclEpFreeFn_t free_fn
    void* context

ctypedef struct ncclEpLayoutInfo_t 'ncclEpLayoutInfo_t':
    unsigned int size
    unsigned int magic
    ncclEpTensor_t* expert_counters
    ncclEpTensor_t* src_rank_counters
    ncclEpTensor_t* expert_offsets
    ncclEpTensor_t* recv_total_counter
    ncclEpExpertIdKind_t recv_topk_idx_kind
    unsigned char padding_v2[4]

ctypedef struct ncclEpDispatchInputs_t 'ncclEpDispatchInputs_t':
    unsigned int size
    unsigned int magic
    ncclEpTensor_t* tokens
    ncclEpTensor_t* topk_weights
    ncclEpTensor_t* scales

ctypedef struct ncclEpDispatchOutputs_t 'ncclEpDispatchOutputs_t':
    unsigned int size
    unsigned int magic
    ncclEpTensor_t* tokens
    ncclEpTensor_t* topk_weights
    ncclEpTensor_t* scales
    ncclEpTensor_t* topk_idx

ctypedef struct ncclEpCombineInputs_t 'ncclEpCombineInputs_t':
    unsigned int size
    unsigned int magic
    ncclEpTensor_t* tokens
    ncclEpTensor_t* topk_weights
    ncclEpTensor_t* scales

ctypedef struct ncclEpCombineOutputs_t 'ncclEpCombineOutputs_t':
    unsigned int size
    unsigned int magic
    ncclEpTensor_t* tokens
    ncclEpTensor_t* topk_weights

ctypedef struct ncclEpGroupConfig_t 'ncclEpGroupConfig_t':
    unsigned int size
    unsigned int magic
    unsigned int version
    ncclEpAlgorithm_t algorithm
    unsigned int num_experts
    unsigned int max_dispatch_tokens_per_rank
    unsigned int max_recv_tokens_per_rank
    unsigned int max_token_bytes
    unsigned long int rdma_buffer_size
    unsigned int num_qp_per_rank
    unsigned int num_channels
    unsigned int max_num_sms
    ncclEpAllocConfig_t alloc
    unsigned int enable_mask
    uint64_t timeout_ns
    ncclEpZeroCopyMode_t zero_copy
    ncclEpOverflowPolicy_t overflow_policy
    unsigned int num_topk
    unsigned char padding_v2[4]


###############################################################################
# Functions
###############################################################################

cdef ncclResult_t ncclEpGetVersion(int* version) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpTensorAlloc(ncclEpTensor_t** tensor, unsigned int ndim, ncclDataType_t datatype, const size_t* sizes, const ncclEpTensorAllocConfig_t* config) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpTensorDestroy(ncclEpTensor_t* tensor) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpCreateGroup(ncclEpGroup_t* ep_group, ncclComm_t comm, const ncclEpGroupConfig_t* config) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpGroupDestroy(ncclEpGroup_t ep_group) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpHandleMemSize(ncclEpGroup_t ep_group, ncclEpLayout_t layout, const ncclEpHandleConfig_t* config, size_t* size_out, int num_topk) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpInitHandle(ncclEpHandle_t* handle, ncclEpGroup_t ep_group, ncclEpLayout_t layout, const ncclEpHandleConfig_t* config, int num_topk, const ncclEpTensor_t* handle_mem) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpUpdateHandle(ncclEpHandle_t handle, const ncclEpTensor_t* topk_idx, const ncclEpLayoutInfo_t* layout_info, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpCreateHandle(ncclEpHandle_t* handle, ncclEpGroup_t ep_group, ncclEpLayout_t layout, const ncclEpTensor_t* topk_idx, const ncclEpLayoutInfo_t* layout_info, const ncclEpHandleConfig_t* config, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpHandleDestroy(ncclEpHandle_t handle) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpDispatch(ncclEpHandle_t handle, const ncclEpDispatchInputs_t* inputs, const ncclEpDispatchOutputs_t* outputs, const ncclEpLayoutInfo_t* layout_info, const ncclEpDispatchConfig_t* config, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpCombine(ncclEpHandle_t handle, const ncclEpCombineInputs_t* inputs, const ncclEpCombineOutputs_t* outputs, const ncclEpCombineConfig_t* config, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpComplete(ncclEpHandle_t handle, const ncclEpCompleteConfig_t* config, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpMaskQuery(ncclEpGroup_t ep_group, int* mask_status, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpMaskUpdate(ncclEpGroup_t ep_group, const int* mask, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpMaskClean(ncclEpGroup_t ep_group, cudaStream_t stream) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpGetAsyncError(ncclEpGroup_t ep_group, int* error_out) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
cdef ncclResult_t ncclEpErrorClear(ncclEpGroup_t ep_group) except?_NCCLRESULT_T_INTERNAL_LOADING_ERROR nogil
